--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav>
           <ul>
             <li><a href="#about">Sobre mim</a></li>
-            <li><a href="#contacts">Contatos</a></li>
+            <li><a href="#contacts">Saiba mais</a></li>
             <li><a href="#project">Projetos</a></li>
           </ul>
         </nav>
@@ -124,7 +124,7 @@
       </section>
     </section>
 
-    <footer>
+    <footer id="contacts">
       <section class="plus-info">
         <h3>Para mais informações:</h3>
         <p></p>
