--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styless/style.css"/>
-    <link
-      rel="shortcut icon"
-      href="./imgs/porfolio.png"
-      type="image/x-icon"
-    />
+    <link rel="stylesheet" href="./styless/style.css" />
+    <link rel="shortcut icon" href="./imgs/porfolio.png" type="image/x-icon" />
     <title>Vinicius Pazos</title>
   </head>
   <body>
-
+                  <!- Header -->
     <section class="box-section-one">
       <section class="container-header">
         <header>
@@ -35,15 +31,15 @@
         </article>
 
         <picture class="imgs">
-          <img src="./imgs/programming.svg" alt="Imagem de um desenvolvedor">
+          <img src="./imgs/programming.svg" alt="Imagem de um desenvolvedor" />
           <div class="programming">
-            <img src="./imgs/img.svg" alt="Imagem de linguagens de programação"">
+            <img src="./imgs/img.svg" alt="Imagem de linguagens de
+            programação"">
           </div>
-
         </picture>
       </section>
     </section>
-
+                  <!- About-me -->
     <section class="about-me">
       <picture>
         <img src="./imgs/vinicius-pazos.png" alt="Imagem Dev Vinicius Pazos" />
@@ -56,98 +52,96 @@
           aprofundar os meus estudos e pensamentos, atualmente estudo:
           <span>NodeJs e ReactJs</span>.
         </p>
-        <button><a href="tel:+5581999979544">Entre em contato</a></button>
+
+        <a href="tel:+5581999979544" class="attention">Entre em contato</a>
+
       </div>
     </section>
-
+                  <!- Projects -->
     <section class="projects" id="project">
-      <section class="project-one">
-        <div class="project-img">
+      <h4>Proj<span>etos</span>:</h4>
+
+      <div class="conj-cards">
+        <section class="cards">
           <picture>
-            <img src="./imgs/porfolio.png" alt="Miniportfólio">
+            <img src="./imgs/porfolio.png" alt="Miniportfólio" />
           </picture>
 
-          <div class="miniportfolio">
-            <h3>Miniportfólio</h3>
-            <p>
-              Aplicação desenvolvida durante a semana <span>Mapa Dev Week</span>. Os estudos
-              foram focados nas <span>tecnologias front-end</span>.
-            </p>
-            <button>
-              <a href="https://miniporfolio-vinicius-pazos.vercel.app/"
-                target="_blank">Ver projeto</a
-              >
-            </button>
-          </div>
-        </div>
-      </section>
+          <h3>Miniportfólio</h3>
+          <p>
+            Aplicação desenvolvida durante a semana <span>Mapa Dev Week</span>. Os
+            estudos foram focados nas <span>tecnologias front-end</span>.
+          </p>
 
-      <section class="project-one">
-        <div class="project-img">
+            <a
+              href="https://miniporfolio-vinicius-pazos.vercel.app/"
+              target="_blank"
+              >Ver projeto</a
+            >
+
+        </section>
+
+        <section class="cards">
           <picture>
             <img src="./imgs/hotel.png" alt="Hotel" />
           </picture>
 
-          <div class="miniportfolio">
-            <h3>Hotel dez corações</h3>
-            <p>
-              Prática lapidada para estudar as propriedades <span>flexbox</span>. Os aprendizados se deram a partir do curso da <span>Origamid</span>.
-            </p>
-            <button>
-              <a href="https://viniciusgithu.github.io/hotel-dez-coracoes/"
-                target="_blank">Ver projeto</a
-              >
-            </button>
-          </div>
-        </div>
-      </section>
+          <h3>Hotel dez corações</h3>
+          <p>
+            Prática lapidada para estudar as propriedades <span>flexbox</span>. Os
+            aprendizados se deram a partir do curso da <span>Origamid</span>.
+          </p>
 
-      <section class="project-one">
-        <div class="project-img">
+            <a
+              href="https://viniciusgithu.github.io/hotel-dez-coracoes/"
+              target="_blank"
+              >Ver projeto</a
+            >
+
+        </section>
+
+        <section class="cards">
           <picture>
             <img src="./imgs/cronometro.png" alt="Cro" />
           </picture>
 
-          <div class="miniportfolio">
-            <h3>Cronômetro</h3>
-            <p>
-              Projeto elaborado para exercitar a lógica do <span>JavaScript</span>. A compreensão
-              foi focada no uso de <span>funções</span>, <span>método assíncrono</span>, <span>manipulação do dom</span>.
-            </p>
-            <button>
-              <a href="https://viniciusgithu.github.io/repository-stopwatch/"
-                target="_blank">Ver projeto</a
-              >
-            </button>
-          </div>
-        </div>
-      </section>
-    </section>
+          <h3>Cronômetro</h3>
+          <p>
+            Projeto elaborado para exercitar a lógica do <span>JavaScript</span>.
+            A compreensão foi focada no uso de <span>funções</span>,
+            <span>método assíncrono</span>, <span>manipulação do dom</span>.
+          </p>
 
+            <a
+              href="https://viniciusgithu.github.io/repository-stopwatch/"
+              target="_blank"
+              >Ver projeto</a
+            >
+
+        </section>
+      </div>  
+    </section>
+                    <!- Footer -->
     <footer id="contacts">
       <section class="plus-info">
-        <h3>Para mais informações:</h3>
+        <h3>Para <span>mais informações</span>:</h3>
         <p></p>
       </section>
 
       <section class="logo-info">
         <button>
-          <a href="https://github.com/Viniciusgithu"
-            target="_blank">
-            <img src="./imgs/github.png" alt="GitHub">
-            </a
-          >
+          <a href="https://github.com/Viniciusgithu" target="_blank">
+            <img src="./imgs/github.png" alt="GitHub" />
+          </a>
         </button>
         <button>
-          <a href="https://www.linkedin.com/in/viniciuspazos"
-            target="_blank">
-            <img src="./imgs/linkedin.png" alt="Linkedin">
-            </a
-          >
+          <a href="https://www.linkedin.com/in/viniciuspazos" target="_blank">
+            <img src="./imgs/linkedin.png" alt="Linkedin" />
+          </a>
         </button>
       </section>
-      
     </footer>
 
+    <script src="./index.js"></script>
   </body>
 </html>
