--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <nav>
           <ul>
             <li><a href="#about">Sobre mim</a></li>
-            <li><a href="#contacts">Saiba mais</a></li>
             <li><a href="#project">Projetos</a></li>
+            <li><a href="#contacts">Saiba mais</a></li>
           </ul>
         </nav>
       </section>
@@ -27,7 +27,8 @@
       <section class="home" id="home">
         <article class="info">
           <h1>Vinicius Lima Pazos</h1>
-          <p>Desenvolvedor <span>Front-End</span></p>
+          <p><span>Desenvolvedor Front-End</span>💻</p>
+
         </article>
 
         <picture class="imgs">
@@ -53,7 +54,7 @@
           <span>NodeJs e ReactJs</span>.
         </p>
 
-        <a href="tel:+5581999979544" class="attention">Entre em contato</a>
+        <a href="tel:+5581999979544" class="attention">Entre em contato 📞 </a>
 
       </div>
     </section>
@@ -67,7 +68,7 @@
             <img src="./imgs/porfolio.png" alt="Miniportfólio" />
           </picture>
 
-          <h3>Miniportfólio</h3>
+          <h3> 1️⃣ Miniportfólio</h3>
           <p>
             Aplicação desenvolvida durante a semana <span>Mapa Dev Week</span>. Os
             estudos foram focados nas <span>tecnologias front-end</span>.
@@ -76,7 +77,7 @@
             <a
               href="https://miniporfolio-vinicius-pazos.vercel.app/"
               target="_blank"
-              >Ver projeto</a
+              >🔗 Ver projeto</a
             >
 
         </section>
@@ -86,7 +87,7 @@
             <img src="./imgs/hotel.png" alt="Hotel" />
           </picture>
 
-          <h3>Hotel dez corações</h3>
+          <h3> 2️⃣ Hotel dez corações</h3>
           <p>
             Prática lapidada para estudar as propriedades <span>flexbox</span>. Os
             aprendizados se deram a partir do curso da <span>Origamid</span>.
@@ -95,7 +96,7 @@
             <a
               href="https://viniciusgithu.github.io/hotel-dez-coracoes/"
               target="_blank"
-              >Ver projeto</a
+              >🔗 Ver projeto</a
             >
 
         </section>
@@ -105,7 +106,7 @@
             <img src="./imgs/cronometro.png" alt="Cro" />
           </picture>
 
-          <h3>Cronômetro</h3>
+          <h3> 3️⃣ Cronômetro</h3>
           <p>
             Projeto elaborado para exercitar a lógica do <span>JavaScript</span>.
             A compreensão foi focada no uso de <span>funções</span>,
@@ -115,7 +116,7 @@
             <a
               href="https://viniciusgithu.github.io/repository-stopwatch/"
               target="_blank"
-              >Ver projeto</a
+              >🔗 Ver projeto</a
             >
 
         </section>
