update with two projects

--- a/index.html
+++ b/index.html
@@ -106,7 +106,47 @@
             <img src="./imgs/cronometro.png" alt="Cro" />
           </picture>
 
-          <h3> 3️⃣ Cronômetro</h3>
+          <h3> 3️⃣ Workshop </h3>
+          <p>
+            Desenvolvido com o intuito de praticar as <span>páginas de captura</span>.
+            O Workshop fictício buscava capturar: <span>nomes</span>,
+            <span>email</span> e enviar <span>newsletter sobre tecnologia</span>.
+          </p>
+
+            <a
+              href="https://workshop-pag-captura.vercel.app"
+              target="_blank"
+              >🔗 Ver projeto</a
+            >
+
+        </section>
+
+        <section class="cards">
+          <picture>
+            <img src="./imgs/cronometro.png" alt="Cro" />
+          </picture>
+
+          <h3> 4️⃣ Lista de Tarefas </h3>
+          <p>
+            Projeto criado para progredir a lógica do <span>JavaScript</span>.
+            A compreensão foi focada no uso do <span>this</span>,
+            <span>localStorage</span>, <span>manipulação do dom</span>.
+          </p>
+
+            <a
+              href="https://lista-de-tarefas-chi.vercel.app"
+              target="_blank"
+              >🔗 Ver projeto</a
+            >
+
+        </section>
+
+        <section class="cards">
+          <picture>
+            <img src="./imgs/cronometro.png" alt="Cro" />
+          </picture>
+
+          <h3> 5️⃣ Cronômetro</h3>
           <p>
             Projeto elaborado para exercitar a lógica do <span>JavaScript</span>.
             A compreensão foi focada no uso de <span>funções</span>,
@@ -120,6 +160,12 @@
             >
 
         </section>
+
+
+
+
+
+
       </div>  
     </section>
                     <!- Footer -->
