--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <section class="cards">
           <picture>
-            <img src="./imgs/cronometro.png" alt="Cro" />
+            <img src="./imgs/workshop.png" alt="workshop" />
           </picture>
 
           <h3> 3️⃣ Workshop </h3>
@@ -123,7 +123,7 @@
 
         <section class="cards">
           <picture>
-            <img src="./imgs/cronometro.png" alt="Cro" />
+            <img src="./imgs/todo.png" alt="lista-de-tarefas" />
           </picture>
 
           <h3> 4️⃣ Lista de Tarefas </h3>
@@ -143,7 +143,7 @@
 
         <section class="cards">
           <picture>
-            <img src="./imgs/cronometro.png" alt="Cro" />
+            <img src="./imgs/cronometro.png" alt="Cronometro" />
           </picture>
 
           <h3> 5️⃣ Cronômetro</h3>
