--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
       <div class="info" id="about">
         <h2>Sobre mim</h2>
         <p>
-          Sou um Programador Front End com experiências e conhecimentos nas
-          tecnologias: <span>HTML, CSS, JavaScript, Git & GitHub</span>. Visando
+          Sou natural de Recife-PE, tenho 27 anos. Estou em transição de carreira, passei mais de 5 anos lecionando Ciências Humanas. Com essa bagagem de experiência, busco ser um Programador Front End. As tecnologias: <span>HTML, CSS, JavaScript, Git & GitHub</span>, fazem parte do meu dia a dia desde o início de 2020. Visando
           aprofundar os meus estudos e pensamentos, atualmente estudo:
           <span>NodeJs e ReactJs</span>.
         </p>
@@ -160,11 +159,6 @@
             >
 
         </section>
-
-
-
-
-
 
       </div>  
     </section>
