--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="info" id="about">
         <h2>Sobre mim</h2>
         <p>
-          Sou natural de Recife-PE, tenho 27 anos. Estou em transição de carreira, passei mais de 5 anos lecionando Ciências Humanas. Com essa bagagem de experiência, busco ser um Programador Front End. As tecnologias: <span>HTML, CSS, JavaScript, Git & GitHub</span>, fazem parte do meu dia a dia desde o início de 2020. Visando
+          Sou natural de Recife-PE, tenho 27 anos. Estou em transição de carreira, passei mais de 5 anos lecionando Ciências Humanas. Com essa bagagem de experiência, busco ser um Programador Front End. Atualmente curso Análise e Desenvolvimento de Sistemas na Universidade Cesumar (UNICESUMAR). Indo além, estudo as tecnologias: <span>HTML, CSS, JavaScript, Git & GitHub</span>, que, fazem parte do meu dia a dia desde o início de 2020. Visando
           aprofundar os meus estudos e pensamentos, atualmente estudo:
           <span>NodeJs e ReactJs</span>.
         </p>
