--- a/index.html
+++ b/index.html
@@ -28,16 +28,8 @@
         <article class="info">
           <h1>Vinicius Lima Pazos</h1>
           <p><span>Desenvolvedor Front-End</span>💻</p>
-
+          <picture><img src="./imgs/logo-portfolio.png" alt="Imagem de um desenvolvedor" /></picture>
         </article>
-
-        <picture class="imgs">
-          <img src="./imgs/programming.svg" alt="Imagem de um desenvolvedor" />
-          <div class="programming">
-            <img src="./imgs/img.svg" alt="Imagem de linguagens de
-            programação"">
-          </div>
-        </picture>
       </section>
     </section>
                   <!- About-me -->
@@ -48,7 +40,7 @@
       <div class="info" id="about">
         <h2>Sobre mim</h2>
         <p>
-          Sou natural de Recife-PE, tenho 27 anos. Estou em transição de carreira, passei mais de 5 anos lecionando Ciências Humanas. Com essa bagagem de experiência, busco ser um Programador Front End. Atualmente curso Análise e Desenvolvimento de Sistemas na Universidade Cesumar (UNICESUMAR). Indo além, estudo as tecnologias: <span>HTML, CSS, JavaScript, Git & GitHub</span>, que, fazem parte do meu dia a dia desde o início de 2020. Visando
+          Sou natural de Recife-PE, tenho 27 anos. Estou em <span>transição de carreira</span>, passei mais de <span>5 anos lecionando Ciências Humanas</span>. Com essa bagagem de experiência, busco ser um <span>Programador Front End</span>. Atualmente curso <span>Análise e Desenvolvimento de Sistemas</span> na Universidade Cesumar (UNICESUMAR). Indo além, estudo as tecnologias: <span>HTML, CSS, JavaScript, Git & GitHub</span>, que, fazem parte do meu dia a dia desde o início de 2020. Visando
           aprofundar os meus estudos e pensamentos, atualmente estudo:
           <span>NodeJs e ReactJs</span>.
         </p>
