--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!- About-me -->
     <section class="container-about-me">
       <div class="about-me">
-        <h1>Sobre mim</h1>
+        <h1>whoami</h1>
         <p>Sou um Pernambucano arretado buscando ser um programdor Full Stack, atualmente é o meu maior desafio. Além de estudar as tecnologias Web (HTML, CSS, JavaScript, framework React), estudo Node.JS. Sou estudante do curso de Análise e Desenvolvimento de Sistemas na Universidade Cesumar (UNICESUMAR).<br><br>
         Amo estudar, tomar café, ler livros de literatura, construir um ambiente massa de trabalho.</p>
       </div>
@@ -141,14 +141,7 @@
           <p>Desenvolvido com o intuito de praticar as páginas de captura. O Workshop fictício buscava capturar: nomes, email e enviar newsletter sobre tecnologia.</p>
 
       </div>
-
-
-
       
-    
-
-
-
     </div>
 
   </section>
