--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </section>  
 
   <section class="service">
-    <h1>Serviços</h1>
+    <h1>Atividades e Responsabilidades</h1>
     <div class="services-container">
       <div class="service-card">
         <i class='bx bx-news'></i>
@@ -72,6 +72,11 @@
       <div class="service-card">
         <i class='bx bx-purchase-tag'></i>
         <h2>Desenvolvimento <br> de Páginas captura</h2>
+      </div>
+
+      <div class="service-card">
+        <i class='bx bx-purchase-tag'></i>
+        <h2>Desenvolvimento <br> de Páginas SPA</h2>
       </div>
     </div>
 
